force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/TSS_StickIt_MR1__StickIt_Queue__c.object-meta.xml
<CustomObject>
    <label>StickIt Queue</label>
    <nameField>
        <displayFormat>SQ{000}</displayFormat>
        <label>StickIt Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stickit Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>