force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/fields/TSS_StickIt_MR1__Label_Name__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Label_Name__c</fullName>
    <label>Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>