force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/fields/TSS_StickIt_MR1__Label_XML__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Label_XML__c</fullName>
    <label>Label XML</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>