force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/fields/TSS_StickIt_MR1__Printer__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Printer__c</fullName>
    <label>Printer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>