force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/fields/TSS_StickIt_MR1__Received__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received?</label>
    <type>Checkbox</type>
</CustomField>