force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/fields/TSS_StickIt_MR1__Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Received_Date_Time__c</fullName>
    <description>Date/Time the label job was successfully received by the StickIt Automation Station</description>
    <label>Received Date/Time</label>
    <type>DateTime</type>
</CustomField>