force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/fields/TSS_StickIt_MR1__Sent_to_Printer_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Sent_to_Printer_Date_Time__c</fullName>
    <description>Date/Time the label was sent to the printer by the StickIt Automation Station</description>
    <label>Sent to Printer Date/Time</label>
    <type>DateTime</type>
</CustomField>