force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Queue__c/listViews/TSS_StickIt_MR1__All.listView-meta.xml
<ListView>
    <fullName>TSS_StickIt_MR1__All</fullName>
    <columns>NAME</columns>
    <columns>TSS_StickIt_MR1__Label_Name__c</columns>
    <columns>TSS_StickIt_MR1__Printer__c</columns>
    <columns>TSS_StickIt_MR1__Received__c</columns>
    <columns>TSS_StickIt_MR1__Received_Date_Time__c</columns>
    <columns>TSS_StickIt_MR1__Sent_to_Printer_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>